<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_grey">

    <android.support.v7.widget.CardView
        android:id="@+id/credits_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        android:layout_margin="8dp"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:id="@+id/icon_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/icon_credit"
                android:layout_marginTop="10dip"
                style="@style/CardTitle_T2" />

           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/two_px"
               android:layout_margin="10dip"
               android:background="@color/grey_lighter" />

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apache_license_title"
                style="@style/CardTitle_T2" />

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:id="@+id/mp4parser_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mp4parser_title"
                android:layout_margin="4dp"
                style="@style/CardTitle_T2" />

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:id="@+id/gson_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gson_title"
                android:layout_margin="4dp"
                style="@style/CardTitle_T2" />

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:id="@+id/reactivex_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reactivex_title"
                android:layout_margin="4dp"
                style="@style/CardTitle_T2" />

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:id="@+id/reactivexandroid_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reactivexandroid_title"
                android:layout_margin="4dp"
                style="@style/CardTitle_T2" />

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:id="@+id/otto_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otto_title"
                android:layout_margin="4dp"
                style="@style/CardTitle_T2" />

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:id="@+id/retrolambda_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retrolambda_title"
                android:layout_margin="4dp"
                style="@style/CardTitle_T2" />

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:id="@+id/gradle_retrolambda_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gradle_retrolambda_title"
                android:layout_margin="4dp"
                style="@style/CardTitle_T2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/two_px"
                android:layout_margin="10dip"
                android:background="@color/grey_lighter" />

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:id="@+id/apache_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginTop="10dip"
                style="@style/CardTitle_T4" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
    
</ScrollView>
