<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adFrame"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/onboarding_layout"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip">

            <com.roryhool.videoinfoviewer.views.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                style="@style/CardTitle_T2"
                android:layout_toLeftOf="@+id/onboarding_image"
                android:layout_marginTop="10dip"
                android:text="@string/onboarding_text" />

            <ImageView
                android:id="@+id/onboarding_image"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:layout_marginRight="36dip"
                android:contentDescription="@string/onboarding_image_content_description"
                android:src="@drawable/ic_commit_search_api_holo_light"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/recent_videos_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            android:layout_margin="8dp"
            app:contentPadding="8dp"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.roryhool.videoinfoviewer.views.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_videos"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    style="@style/CardTitle_T1" />

                <ListView
                    android:id="@+id/recentVideosList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:divider="@null" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_white_36dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:backgroundTint="@color/accent"
        app:rippleColor="@color/accentDark"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>